syntax = "proto3";
option cc_enable_arenas = true;

package Ydb.Scheme;
option java_package = "com.yandex.ydb.scheme";
option java_outer_classname = "SchemeOperationProtos";

import "ydb/public/api/protos/annotations/validation.proto";
import "ydb/public/api/protos/ydb_common.proto";
import "ydb/public/api/protos/ydb_operation.proto";
import "ydb/public/api/protos/ydb_scheme_entry.proto";

// Create directory.
// All intermediate directories must be created
message MakeDirectoryRequest {
    Ydb.Operations.OperationParams operation_params = 1;
    string path = 2 [(required) = true];
}

message MakeDirectoryResponse {
    Ydb.Operations.Operation operation = 1;
}

// Remove directory
message RemoveDirectoryRequest {
    Ydb.Operations.OperationParams operation_params = 1;
    string path = 2 [(required) = true];
}

message RemoveDirectoryResponse {
    Ydb.Operations.Operation operation = 1;
}

// List directory
message ListDirectoryRequest {
    Ydb.Operations.OperationParams operation_params = 1;
    string path = 2 [(required) = true];
}

message ListDirectoryResponse {
    // Holds ListDirectoryResult in case of successful call
    Ydb.Operations.Operation operation = 1;
}

message ListDirectoryResult {
    Entry self = 1;
    repeated Entry children = 2;
}

// Returns information about object with given path
message DescribePathRequest {
    Ydb.Operations.OperationParams operation_params = 1;
    string path = 2 [(required) = true];
}

message DescribePathResponse {
    // Holds DescribePathResult in case of DescribePathResult
    Ydb.Operations.Operation operation = 1;
}

message DescribePathResult {
    Entry self = 1;
}

message DescribeSchemeObjectRequest {
    Ydb.Operations.OperationParams operation_params = 1;
    string path = 2 [(required) = true];
}

message DescribeSchemeObjectResponse {
    // Holds DescribePathResult in case of DescribePathResult
    Ydb.Operations.Operation operation = 1;
}

message DescribeSchemeObjectResult {
    Entry self = 1;

    oneof type_specific_description {
        Ydb.Table.TableDescription table_description = 2;
        Ydb.View.ViewDescription view_description = 3;
    }
}

message PermissionsAction {
    oneof action {
        // Grant permissions
        Permissions grant = 1;
        // Revoke permissions
        Permissions revoke = 2;
        // Rewrite permissions for given subject (last set win in case of multiple set for one subject)
        Permissions set = 3;
        // New owner for object
        string change_owner = 4;
    }
}

// Modify permissions of given object
message ModifyPermissionsRequest {
    Ydb.Operations.OperationParams operation_params = 1;
    string path = 2 [(required) = true];
    repeated PermissionsAction actions = 3;
    // Clear all permissions on the object for all subjects
    bool clear_permissions = 4;
    oneof inheritance {
        bool interrupt_inheritance = 5;
    }
}

message ModifyPermissionsResponse {
    Ydb.Operations.Operation operation = 1;
}
